<resources>
    <string name="app_name">HCI Debugger</string>
    <string name="drawer_title">HCI Debug</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="open_source_items">Open Source components</string>
    <string name="about">About</string>
    <string name="copyright">\u00a9 2016-2017 Bertrand Martel</string>
    <string name="github_link">https://github.com/bertrandmartel/hci-debugger</string>
    <string name="last_packet_count">Set max visible packet count</string>
    <string name="bluetooth_config">/etc/bluetooth/bt_stack.conf</string>
    <string name="hci_warning">HCI file is specified but is not present in filesystem. Check in Developer Section that btsnoop file log is activated</string>
    <string name="error_opening">An error occured while opening snoop log file</string>
    <string name="error_reading">An error occured while reading snoop log file</string>
    <string name="warning_dialog_exit">exit</string>
    <string name="warning_dialog_retry">retry</string>
    <string name="menu_item_title_enable_bluetooth">enable bluetooth</string>
    <string name="menu_item_title_disable_bluetooth">disable bluetooth</string>
    <string name="menu_item_title_enable_bluetooth_portrait">bluetooth state</string>
    <string name="menu_item_title_start_scan">start scan</string>
    <string name="menu_item_title_stop_scan">stop scan</string>
    <string name="toast_scan_stop">scan has stopped</string>
    <string name="toast_scan_start">scan has started</string>
    <string name="toast_bluetooth_enabled">bluetooth enabled</string>
    <string name="toast_bluetooth_disabled">bluetooth disabled</string>
    <string name="bt_config_file_name_filter">BtSnoopFileName</string>
    <string name="filter_choose">Choose</string>
    <string name="dialog_ok">Ok</string>
    <string name="developper_mail">bmartel.fr@gmail.com</string>
    <string name="issue_object">HCI Debugger Issue</string>
    <string name="issue_title">Report a problem</string>
    <string name="issue_message">Your error report here...</string>
    <string name="processing_hci_frames">Processing HCI frames...</string>
    <string name="file_snoop_empty">File is empty. Waiting for log...</string>
    <string name="menu_title_clear">clear</string>
    <string name="menu_title_scan">start scan</string>
    <string name="menu_title_bluetooth">disable bluetooth</string>
    <string name="menu_title_reset_snoop_file">reset HCI snoop log</string>
    <string name="scan_settings_type_classic_scan">scan type : Classic/BLE</string>
    <string name="share_menu_title">share</string>
    <string name="scan_settings_type_ble_scan">scan type : BLE</string>
    <string name="menu_title_report_bugs">Report Bugs</string>
    <string name="rate_app_title">Rate this app</string>
    <string name="menu_title_open_source_components">Open Source components</string>
    <string name="menu_title_about">About</string>
    <string name="menu_title_set_max_visible_packet_count">Set max visible packet count</string>
    <string name="menu_title_refresh">refresh</string>
    <string name="menu_title_filter">filter</string>
    <string name="description_activity_title_packet_type">packet type</string>
    <string name="description_activity_title_timestamp">timestamp</string>
    <string name="description_activity_title_destination">destination</string>
    <string name="description_activity_title_packet_number">packet number</string>
    <string name="filter_dialog_withdraw_filter">withdraw filter</string>
    <string name="filter_dialog_apply">apply</string>
    <string name="filter_dialog_cancel">cancel</string>
    <string name="filter_dialog_device_address">device address</string>
    <string name="menu_title_browse_snoop_file">browse btsnoop file</string>
    <string name="configuration_snoopfile_title">Btsnoop file path</string>
    <string name="cancel_button">cancel</string>
    <string name="snoop_file_text">file path</string>
    <string name="browse_file">browse file</string>
    <string name="default_path">default path</string>
    <string name="browse_button">browse snoop file</string>
</resources>
