<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/packet_number_entry"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/clear_btn"
        android:icon="@drawable/ic_action_trash"
        android:title="@string/menu_title_clear"
        app:showAsAction="always" />
    <item
        android:id="@+id/scan_btn"
        android:icon="@drawable/ic_action_scanning"
        android:title="@string/menu_title_scan"
        app:showAsAction="always" />
    <item
        android:id="@+id/state_bt_btn"
        android:icon="@drawable/ic_bluetooth_disabled"
        android:title="@string/menu_title_bluetooth"
        app:showAsAction="always" />
    <item
        android:id="@+id/reset_snoop_file"
        android:icon="@drawable/ic_flash_on"
        android:title="@string/menu_title_reset_snoop_file"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/filter_btn"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/menu_title_filter"
        app:showAsAction="always" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_settings_backup_restore"
        android:title="@string/menu_title_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share_menu_title"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
</menu>
